...
            verticalArrangement = Arrangement.spacedBy(8.dp),
        ) {
            val focusRequester = remember { FocusRequester() }
            LaunchedEffect(Unit) {
                focusRequester.requestFocus()
            }
            SearchBar(
                modifier = Modifier
                    .focusRequester(focusRequester)
                    .fillMaxWidth()
                    .height(56.dp),
                onEvent = onEvent,
                state = state,
            )

            LazyColumn(
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("SearchList"),
                verticalArrangement = Arrangement.spacedBy(8.dp),
            ) {
                items(searchResult.itemCount) { index ->
                    val search = searchResult[index]
                    SearchItem(search = search, onClick = {
                        onEvent(SearchEvents.OpenFilmDetails(search))
...
