...
import kotlinx.serialization.KSerializer
import kotlinx.serialization.Serializable
import kotlinx.serialization.SerializationException
import kotlinx.serialization.json.Json

@Serializable
sealed class DashboardScreenRoute(val routeName: String) {
    companion object {
        const val ROUTE = "dashboard"
    }

    @Serializable
    data object MainRoute : DashboardScreenRoute(routeName = ROUTE)
...
