...
                onEvents(DetailsEvents.NavigateBack)
            }, imageVector = Icons.AutoMirrored.Filled.ArrowBack,
            contentDescription = null
        )

        CircleButton(
            modifier = Modifier.testTag("AddToBookMark"),
            onClick = {
                if (isLiked) {
                    onEvents(
                        DetailsEvents.RemoveFromBookmark(
                            Bookmark(
                                bookmark = false,
...
