...
                            typeMap = mapOf(
                                typeOf<Film>() to SealedClassNavType(Film.serializer()) as NavType<Film>,
                            )
                        ) {
                            val args = it.toRoute<DashboardScreenRoute.DetailsScreenArguments>()
                            SharedTransitionLayout {
                                DetailsScreen(
                                    navController = navController, film = args.film, animatedVisibilityScope = this@composable
                                )
                            }
                        }
                        composable<DashboardScreenRoute.CastsOverviewScreenArguments>(
                            typeMap = mapOf(
...
